# npg-python-lib

./: README.md  pyproject.toml  requirements.txt  test-requirements.txt
.github/workflows/: run-tests.yml
src/npg/: __init__.py  cli.py  conf.py  iter.py  log.py
tests/: test_cli.py  test_conf.py  test_iter.py
